<resources>
    <string name="app_name">puzzle_game</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="gameName">My Beautiful Dark Twisted Fantasy in Dungeons</string>
    <string name="welcomeMessage">Welcome to the game!</string>
    <string name="playGame">Play Game</string>
    <string name="profile">Profile</string>
    <string name="friendsList">Friends List</string>
    <string name="login">Login</string>
    <string name="gameNameHomeScreen">Puzzle App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createAccount">Create a new account</string>
    <string name="email">email</string>
</resources>